--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "medical-tender",
+   "id": "lyric-damages",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "super-present",
+   "id": "daily-generic",
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "outer-intro",
+   "id": "planned-gauge",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "greater-method",
+   "id": "happy-defensive",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "iraqi-hampshire",
+   "id": "defensive-flower",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "professional-appreciation",
+   "id": "brazilian-karen",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "subsequent-threat",
+   "id": "architectural-flour",
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "flush-cycle",
+   "id": "australian-ethernet",
    "metadata": {},
    "outputs": [
     {
@@ -271,8 +271,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "id": "alien-prevention",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'04/11/21'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the time module.\n",
+    "import time\n",
+    "# Get today's date in seconds.\n",
+    "today = time.strftime(\"%x\")\n",
+    "today"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "vocal-istanbul",
+   "id": "french-dayton",
    "metadata": {},
    "outputs": [],
    "source": []
