--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "lyric-damages",
+   "id": "dutch-sugar",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "daily-generic",
+   "id": "secure-management",
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "planned-gauge",
+   "id": "brilliant-metabolism",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "happy-defensive",
+   "id": "direct-treatment",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "defensive-flower",
+   "id": "gross-interaction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "brazilian-karen",
+   "id": "central-destination",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "architectural-flour",
+   "id": "subjective-fraction",
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "australian-ethernet",
+   "id": "opposed-monaco",
    "metadata": {},
    "outputs": [
     {
@@ -271,8 +271,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "alien-prevention",
+   "execution_count": 42,
+   "id": "final-trick",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
        "'04/11/21'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,8 +296,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "id": "sufficient-tamil",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'northern_hemi_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-43-db0afcfe1a6c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Linear regression on the Northern Hemisphere\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mx_values\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnorthern_hemi_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Lat\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0my_values\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnorthern_hemi_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Wind Speed\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Call the function.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m plot_linear_regression(x_values, y_values,\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'northern_hemi_df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Linear regression on the Northern Hemisphere\n",
+    "x_values = northern_hemi_df[\"Lat\"]\n",
+    "y_values = northern_hemi_df[\"Wind Speed\"]\n",
+    "# Call the function.\n",
+    "plot_linear_regression(x_values, y_values,\n",
+    "                       'Linear Regression on the Northern Hemisphere \\n for Wind Speed', 'Wind Speed',(40,35))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "french-dayton",
+   "id": "backed-cutting",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "helpful-prerequisite",
    "metadata": {},
    "outputs": [],
    "source": []
